[gd_scene load_steps=28 format=4 uid="uid://d1qc2s6boueup"]

[ext_resource type="Script" path="res://gameplay/levels/level2/Level_2.gd" id="1_sax3l"]
[ext_resource type="TileSet" uid="uid://b3c1hcw6x6y0p" path="res://assets/tiles0_0.tres" id="2_8i7y1"]
[ext_resource type="PackedScene" uid="uid://d131hwcs5mgd5" path="res://gameplay/elements/Damage.tscn" id="3_exlq3"]
[ext_resource type="PackedScene" uid="uid://c4x12fhcm1n4u" path="res://gameplay/elements/Pad.tscn" id="3_siekg"]
[ext_resource type="PackedScene" uid="uid://lukwf4jblxo8" path="res://gameplay/elements/Coin.tscn" id="4_onjdc"]
[ext_resource type="PackedScene" uid="uid://3xgycv5wxm7e" path="res://gameplay/elements/Button.tscn" id="5_20868"]
[ext_resource type="PackedScene" uid="uid://cbaaxryfl454c" path="res://gameplay/elements/Exit.tscn" id="5_glqln"]
[ext_resource type="Script" path="res://gameplay/levels/level2/Level_2_Circuit.gd" id="5_r15o5"]
[ext_resource type="Texture2D" uid="uid://dsgotgahmquxy" path="res://assets/tiles0.png" id="6_8luku"]
[ext_resource type="Script" path="res://gameplay/levels/Mover.gd" id="8_7owp2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rubjj"]
size = Vector2(4, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_2jl05"]
atlas = ExtResource("6_8luku")
region = Rect2(168, 132, 12, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_heayj"]
atlas = ExtResource("6_8luku")
region = Rect2(180, 132, 12, 12)

[sub_resource type="SpriteFrames" id="SpriteFrames_1p5sf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2jl05")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_heayj")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a0b48"]
size = Vector2(180, 4)

[sub_resource type="AtlasTexture" id="AtlasTexture_a6i1b"]
atlas = ExtResource("6_8luku")
region = Rect2(180, 108, 12, 12)
filter_clip = true

[sub_resource type="AtlasTexture" id="AtlasTexture_ivpx0"]
atlas = ExtResource("6_8luku")
region = Rect2(180, 96, 12, 12)
filter_clip = true

[sub_resource type="AtlasTexture" id="AtlasTexture_2v7sc"]
atlas = ExtResource("6_8luku")
region = Rect2(144, 108, 12, 12)
filter_clip = true

[sub_resource type="Curve2D" id="Curve2D_a8ipg"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 192, 372, 0, 0, 0, 0, 192, 480, 0, 0, 0, 0, 192, 372)
}
point_count = 3

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mwfjw"]
size = Vector2(16, 2)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0ybfr"]
size = Vector2(28, 6)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jnvvs"]
size = Vector2(40, 6)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n5hh5"]
size = Vector2(84, 2)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7vndr"]
size = Vector2(132, 2)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_33ydi"]
size = Vector2(4, 6)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r702x"]
size = Vector2(74, 2)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u4myh"]
size = Vector2(100, 6)

[node name="Level_2" type="Node2D"]
script = ExtResource("1_sax3l")

[node name="Map" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAAAAAAJAAIAAAAAAAEAAAAJAAIAAAAAAAsAAAALAAIAAAAAAAwAAAALAAIAAAAAAA0AAAALAAIAAAAAAA4AAAALAAIAAAABAAAAAAAJAAIAAAACAAAAAAAJAAIAAAADAAAAAAAJAAIAAAAEAAAAAAAJAAIAAAAFAAAAAAAJAAIAAAAGAAAAAAAJAAIAAAAHAAAAAAAJAAIAAAAIAAAAAAAJAAIAAAAJAAAAAAAJAAIAAAAKAAAAAAAJAAIAAAALAAAAAAAJAAIAAAAMAAAAAAAJAAIAAAANAAAAAAAJAAIAAAAOAAAAAAAJAAIAAAAAAP//AAAKAAAAAAABAP//AAAKAAAAAAACAP//AAAKAAAAAAADAP//AAAKAAAAAAAEAP//AAAKAAAAAAAFAP//AAAKAAAAAAAGAP//AAAKAAAAAAAHAP//AAAKAAAAAAAIAP//AAAKAAAAAAAJAP//AAAKAAAAAAAKAP//AAAKAAAAAAALAP//AAAKAAAAAAAMAP//AAAKAAAAAAANAP//AAAKAAAAAAAOAP//AAAKAAAAAAAAAA8AAAALAAIAAAD//w8AAAAIAAEAAAD//w4AAAAIAAEAAAD//w0AAAAIAAEAAAD//wwAAAAIAAEAAAD//wsAAAAIAAEAAAD//woAAAAIAAEAAAD//wkAAAAIAAEAAAD//wgAAAAIAAEAAAD//wcAAAAIAAEAAAD//wYAAAAIAAEAAAD//wUAAAAIAAEAAAD//wQAAAAIAAEAAAD//wEAAAAIAAEAAAD//wAAAAAIAAEAAAD/////AAAIAAAAAAApAAAAAAAJAAIAAAApAP//AAAKAAAAAAAoAAAAAAAJAAIAAAAoAP//AAAKAAAAAAAnAAAAAAAJAAIAAAAnAP//AAAKAAAAAAAmAAAAAAAJAAIAAAAmAP//AAAKAAAAAAAlAAAAAAAFAAIAAAAlAP//AAAKAAAAAAAkAAAAAAAJAAMAAAAkAP//AAAKAAAAAAAjAAAAAAAJAAMAAAAjAP//AAAKAAAAAAAiAAAAAAAJAAMAAAAiAP//AAAKAAAAAAAhAAAAAAAJAAMAAAAhAP//AAAKAAAAAAAgAAAAAAAJAAMAAAAgAP//AAAKAAAAAAAfAAAAAAAJAAMAAAAfAP//AAAKAAAAAAAeAAAAAAAJAAMAAAAeAP//AAAKAAAAAAAdAAAAAAAJAAMAAAAdAP//AAAKAAAAAAAcAAAAAAAJAAMAAAAcAP//AAAKAAAAAAAbAAAAAAAGAAIAAAAbAP//AAAKAAAAAAAaAAAAAAAJAAIAAAAaAP//AAAKAAAAAAAZAAAAAAAJAAIAAAAZAP//AAAKAAAAAAAYAAAAAAAJAAIAAAAYAP//AAAKAAAAAAAXAAAAAAAJAAIAAAAXAP//AAAKAAAAAAAWAAAAAAAJAAIAAAAWAP//AAAKAAAAAAAVAAAAAAAJAAIAAAAVAP//AAAKAAAAAAAUAAAAAAAJAAIAAAAUAP//AAAKAAAAAAATAAAAAAAJAAIAAAATAP//AAAKAAAAAAASAAAAAAAJAAIAAAASAP//AAAKAAAAAAARAAAAAAAJAAIAAAARAP//AAAKAAAAAAAQAAAAAAAJAAIAAAAQAP//AAAKAAAAAAAPAAAAAAAJAAIAAAAPAP//AAAKAAAAAAAAACoAAAAJAAIAAAAAACkAAAAGAAEAAAAAACgAAAALAAIAAAAAACcAAAALAAIAAAAAACYAAAAGAAIAAAAAACUAAAAAAAYAAAAAACQAAAABAAQAAAAAACMAAAAJAAIAAAAAACIAAAAJAAIAAAAAACEAAAAJAAIAAAAAACAAAAAJAAIAAAAAAB8AAAACAAcAAAAAAB4AAAALAAIAAAAAAB0AAAACAAcAAAAAABwAAAALAAIAAAAAABoAAAALAAIAAAAAABkAAAALAAIAAAAAABgAAAALAAIAAAAAABcAAAALAAIAAAAAABYAAAALAAIAAAAAABUAAAALAAIAAAAAABQAAAALAAIAAAAAABMAAAACAAcAAAAAABIAAAALAAIAAAAAABEAAAALAAIAAAAAABAAAAALAAIAAAD//yoAAAAIAAEAAAD//ykAAAAIAAEAAAD//ygAAAAIAAEAAAD//ycAAAAIAAEAAAD//yYAAAAIAAEAAAD//yUAAAAIAAEAAAD//yQAAAAIAAEAAAD//yMAAAAIAAEAAAD//yIAAAAIAAEAAAD//yEAAAAIAAEAAAD//yAAAAAIAAEAAAD//x8AAAABAAcAAAD//x4AAAAIAAEAAAD//x0AAAABAAcAAAD//xwAAAAIAAEAAAD//xoAAAAIAAEAAAD//xkAAAAIAAEAAAD//xgAAAAIAAEAAAD//xcAAAAIAAEAAAD//xYAAAAIAAEAAAD//xUAAAAIAAEAAAD//xQAAAAIAAEAAAD//xMAAAACAAcAAAD//xIAAAAIAAEAAAD//xEAAAAIAAEAAAD//xAAAAAIAAEAAAApACoAAAAKAAAAAAAoACoAAAAKAAAAAAAnACoAAAAKAAAAAAAmACoAAAAKAAAAAAAlACoAAAAKAAAAAAAkACoAAAAKAAAAAAAjACoAAAAKAAAAAAAiACoAAAAKAAAAAAAhACoAAAAKAAAAAAAgACoAAAAKAAAAAAAfACoAAAAKAAAAAAAeACoAAAAKAAAAAAAdACoAAAAKAAAAAAAcACoAAAAKAAAAAAAbACoAAAAKAAAAAAAaACoAAAAKAAAAAAAZACoAAAAKAAAAAAAYACoAAAAKAAAAAAAXACoAAAAKAAAAAAAWACoAAAAGAAEAAAAWACkAAAALAAIAAAAVACoAAAAJAAIAAAAVACkAAAAJAAIAAAAUACoAAAAJAAIAAAAUACkAAAAJAAIAAAATACoAAAAJAAIAAAATACkAAAAFAAEAAAASACoAAAAJAAIAAAASACkAAAAKAAAAAAARACoAAAAJAAIAAAARACkAAAAKAAAAAAAQACoAAAAJAAIAAAAQACkAAAAKAAAAAAAPACoAAAAJAAIAAAAPACkAAAAKAAAAAAAOACoAAAAJAAIAAAAOACkAAAAKAAAAAAANACoAAAAJAAIAAAANACkAAAAKAAAAAAAMACoAAAAJAAIAAAAMACkAAAAKAAAAAAALACoAAAAJAAIAAAALACkAAAAKAAAAAAAKACoAAAAJAAIAAAAKACkAAAAKAAAAAAAJACoAAAAJAAIAAAAJACkAAAAKAAAAAAAIACoAAAAJAAIAAAAIACkAAAAKAAAAAAAHACoAAAAJAAIAAAAHACkAAAAKAAAAAAAGACoAAAAJAAIAAAAGACkAAAAKAAAAAAAEACoAAAAJAAIAAAAEACkAAAAKAAAAAAADACoAAAAJAAIAAAADACkAAAAKAAAAAAACACoAAAAJAAIAAAACACkAAAAKAAAAAAABACoAAAAJAAIAAAABACkAAAAKAAAAAAABACYAAAALAAMAAAABACUAAAAGAAIAAAACACUAAAALAAMAAAACACQAAAAGAAIAAAADACQAAAALAAMAAAADACMAAAAGAAIAAAAEACMAAAAJAAMAAAAFACMAAAAJAAMAAAAGACMAAAAJAAMAAAAHACMAAAAFAAIAAAAHACQAAAAIAAMAAAAIACQAAAAFAAIAAAAIACUAAAAIAAMAAAAJACUAAAAFAAIAAAAJACYAAAAIAAMAAAAKACYAAAAJAAMAAAALACYAAAALAAMAAAACACMAAAADAAYAAAABACQAAAADAAYAAAABACMAAAABAAQAAAAIACMAAAABAAYAAAAJACMAAAADAAQAAAAKACMAAAAJAAIAAAALACMAAAALAAIAAAALACQAAAALAAIAAAALACUAAAALAAIAAAAKACUAAAAAAAYAAAAKACQAAAADAAQAAAAJACQAAAABAAYAAAALACIAAAALAAIAAAALACEAAAALAAIAAAALACAAAAALAAIAAAALAB8AAAACAAcAAAAKAB8AAAACAAcAAAAJAB8AAAACAAcAAAAIAB8AAAACAAcAAAAHAB8AAAACAAcAAAAGAB8AAAACAAcAAAAFAB8AAAACAAcAAAAEAB8AAAACAAcAAAADAB8AAAACAAcAAAACAB8AAAACAAcAAAABAB8AAAACAAcAAAABACAAAAAJAAIAAAABACEAAAAJAAIAAAABACIAAAAJAAIAAAACACIAAAABAAQAAAADACIAAAACAAcAAAAEACIAAAACAAcAAAAFACIAAAACAAcAAAAGACIAAAACAAcAAAAHACIAAAACAAcAAAAIACIAAAADAAQAAAAJACIAAAAJAAIAAAAKACIAAAAJAAIAAAAKACEAAAAJAAIAAAAKACAAAAAJAAIAAAAJACAAAAAJAAIAAAAIACAAAAAJAAIAAAAHACAAAAAJAAIAAAAGACAAAAAJAAIAAAAFACAAAAAJAAIAAAAEACAAAAAJAAIAAAADACAAAAAJAAIAAAACACAAAAAJAAIAAAACACEAAAAJAAIAAAADACEAAAAJAAIAAAAEACEAAAAJAAIAAAAFACEAAAAJAAIAAAAGACEAAAAJAAIAAAAHACEAAAAJAAIAAAAIACEAAAAJAAIAAAAJACEAAAAJAAIAAAAMAB8AAAACAAcAAAANAB8AAAACAAcAAAAPAB8AAAADAAcAAAAOAB8AAAACAAcAAAATACgAAAAIAAEAAAATACcAAAAIAAEAAAATACYAAAAIAAEAAAATACUAAAAIAAEAAAATACQAAAAIAAEAAAATACMAAAAIAAEAAAATACIAAAAIAAEAAAATACEAAAAIAAEAAAATACAAAAAIAAEAAAATAB8AAAAIAAEAAAAUAB8AAAAJAAIAAAAUACAAAAAJAAIAAAAUACEAAAAJAAIAAAAUACIAAAAJAAIAAAAUACMAAAAJAAIAAAAUACQAAAAJAAIAAAAUACUAAAAJAAIAAAAUACYAAAAJAAIAAAAUACcAAAAJAAIAAAAUACgAAAAJAAIAAAATAB4AAAAIAAEAAAATAB0AAAAIAAEAAAATABwAAAAIAAEAAAATABsAAAAIAAEAAAATABoAAAAIAAEAAAAUABoAAAAJAAIAAAAUABsAAAAJAAIAAAAUABwAAAAJAAIAAAAUAB0AAAAJAAIAAAAUAB4AAAAJAAIAAAATABkAAAAIAAEAAAASABkAAAACAAcAAAARABkAAAACAAcAAAAQABkAAAACAAYAAAAPABkAAAACAAcAAAAOABkAAAACAAcAAAANABkAAAACAAcAAAAMABkAAAACAAcAAAALABkAAAACAAcAAAAKABkAAAACAAcAAAAJABkAAAACAAcAAAAIABkAAAACAAcAAAAHABkAAAABAAcAAAAUABkAAAAJAAIAAAALAB4AAAAPAAAAAAAKAB4AAAAPAAAAAAAJAB4AAAAPAAAAAAADAB0AAAADAAcAAAACAB0AAAACAAcAAAABAB0AAAACAAcAAAACABsAAAADAAcAAAABABsAAAACAAcAAAAAABsAAAACAAcAAAD//xsAAAABAAcAAAATABgAAAAIAAEAAAATABcAAAAIAAEAAAATABYAAAAIAAEAAAATABUAAAAIAAEAAAATABQAAAAIAAEAAAAUABQAAAAJAAIAAAAUABUAAAAJAAIAAAAUABYAAAAJAAIAAAAUABcAAAAJAAIAAAAUABgAAAAJAAIAAAASABgAAAAPAAAAAAARABgAAAAPAAAAAAAQABgAAAAAAAQAAAAPABgAAAAPAAAAAAAMABYAAAAAAAsAAAAIABQAAAAAAAsAAAABABMAAAADAAcAAAD+/xMAAAABAAcAAAAFAA8AAAACAAgAAAAGAA8AAAACAAsAAAAHAA4AAAAAAAgAAAAHAA8AAAACAAoAAAAIAA4AAAANAAAAAAAIAA8AAAACAAsAAAAJAA4AAAANAAAAAAAJAA8AAAACAAgAAAAKAA4AAAANAAAAAAAKAA8AAAACAAsAAAALAA4AAAAAAAgAAAALAA8AAAACAAoAAAAMAA4AAAANAAAAAAAMAA8AAAACAAsAAAANAA4AAAANAAAAAAANAA8AAAACAAgAAAAOAA4AAAANAAAAAAAOAA8AAAACAAsAAAAPAA4AAAAAAAgAAAAPAA8AAAACAAoAAAAQAA8AAAACAAsAAAARAA8AAAACAAgAAAAEAA8AAAABAAsAAAAFABAAAAAAAAoAAAAGABAAAAANAAAAADAHABAAAAANAAAAADAIABAAAAANAAAAADAJABAAAAAAAAoAAAAKABAAAAANAAAAADALABAAAAANAAAAADAMABAAAAANAAAAADANABAAAAAAAAoAAAAOABAAAAANAAAAADAPABAAAAANAAAAADAQABAAAAANAAAAADARABAAAAAAAAoAAAASAA8AAAADAAsAAAATABMAAAAIAAEAAAAUABMAAAAJAAIAAAATABIAAAAIAAAAAAAUABIAAAAFAAEAAAAUABEAAAAIAAEAAAATABEAAAAPAAEAAAATAAwAAAABAAMAAAAUAAwAAAAFAAAAAAATAAgAAAAIAAMAAAATAAcAAAAIAAEAAAATAAYAAAAIAAEAAAATAAUAAAAIAAEAAAATAAQAAAAIAAEAAAAUAAQAAAAJAAIAAAAUAAUAAAAJAAIAAAAUAAYAAAAJAAIAAAAUAAcAAAAJAAIAAAAUAAgAAAAJAAMAAAATAAMAAAAIAAEAAAATAAIAAAAFAAIAAAATAAEAAAAJAAIAAAAUAAEAAAAJAAIAAAAUAAIAAAAJAAIAAAAUAAMAAAAJAAIAAAAPAAoAAAADAAcAAAAOAAoAAAACAAcAAAANAAoAAAACAAYAAAAMAAoAAAACAAcAAAALAAoAAAACAAcAAAAKAAoAAAACAAYAAAAJAAoAAAACAAcAAAAIAAoAAAACAAcAAAAHAAoAAAABAAYAAAANAAkAAAAAAAQAAAAKAAkAAAAAAAUAAAAKAAgAAAAAAAUAAAAKAAcAAAAAAAQAAAAHAAcAAAAAAAUAAAAHAAgAAAAAAAUAAAAHAAkAAAAAAAUAAAAHAAUAAAAAAAQAAAAHAAYAAAAAAAUAAAAIAAkAAAANAAAAAAAJAAkAAAANAAAAAAALAAkAAAANAAAAAAAMAAkAAAANAAAAAAAOAAkAAAAOAAAAAAAUABAAAAAIAAEAAAAUAA8AAAAIAAEAAAAUAA4AAAAIAAEAAAAUAA0AAAAIAAEAAAAVAAwAAAAKAAAAAAAWAAwAAAAKAAAAAAAXAAwAAAAKAAAAAAAYAAwAAAALAAAAAAAYAAgAAAALAAMAAAAXAAgAAAAJAAMAAAAVAAgAAAAJAAMAAAAYAAcAAAALAAIAAAAYAAYAAAALAAIAAAAYAAUAAAALAAIAAAAYAAQAAAALAAIAAAAYAAMAAAAGAAIAAAAYAAIAAAAJAAIAAAAYAAEAAAAJAAIAAAAXAAEAAAAJAAIAAAAXAAIAAAAJAAIAAAAXAAMAAAAJAAIAAAAXAAQAAAAJAAIAAAAXAAUAAAAJAAIAAAAXAAYAAAAJAAIAAAAXAAcAAAAJAAIAAAAWAAUAAAAJAAIAAAAWAAQAAAAJAAIAAAAWAAMAAAAJAAIAAAAWAAIAAAAJAAIAAAAWAAEAAAAJAAIAAAAVAAEAAAAJAAIAAAAVAAIAAAAJAAIAAAAVAAMAAAAJAAIAAAAVAAQAAAAJAAIAAAAVAAUAAAAJAAIAAAAVAAYAAAAJAAIAAAAVAAcAAAAJAAIAAAAYAA0AAAALAAIAAAAXAA0AAAAJAAIAAAAWAA0AAAAJAAIAAAAVAA0AAAAJAAIAAAAVAA4AAAAJAAIAAAAVAA8AAAAJAAIAAAAVABAAAAAJAAIAAAAVABEAAAAJAAIAAAAVABMAAAAJAAIAAAAVABQAAAAJAAIAAAAVABUAAAAJAAIAAAAVABIAAAAJAAIAAAAVABYAAAAJAAIAAAAVABcAAAAJAAIAAAAVABgAAAAJAAIAAAAVABkAAAAJAAIAAAAVABoAAAAJAAIAAAAVABsAAAAJAAIAAAAVABwAAAAJAAIAAAAVAB0AAAAJAAIAAAAVAB4AAAAJAAIAAAAVAB8AAAAJAAIAAAAVACAAAAAJAAIAAAAVACEAAAAJAAIAAAAVACIAAAAJAAIAAAAVACMAAAAJAAIAAAAVACQAAAAJAAIAAAAVACUAAAAJAAIAAAAVACYAAAAJAAIAAAAVACcAAAAJAAIAAAAVACgAAAAJAAIAAAAEAAUAAAALAAQAAAAEAAYAAAALAAYAAAAEAAcAAAALAAYAAAADAAcAAAAIAAUAAAADAAUAAAAKAAQAAAADAAYAAAAFAAYAAAACAAYAAAAJAAcAAAD//wMAAAAIAAEAAAD//wIAAAAIAAEAAAAAAAIAAAAGAAIAAAADABUAAAAAAAsAAAAWAAgAAAAJAAMAAAAWAAcAAAAJAAIAAAAWAAYAAAAJAAIAAAAEAAkAAAALAAcAAAADAAkAAAAJAAcAAAACAAkAAAAJAAcAAAACAAgAAAAKAAQAAAADAAgAAAAFAAUAAAAEAAgAAAALAAYAAAACAAUAAAAKAAQAAAAAAAoAAAALAAIAAAAAAAkAAAAIAAcAAAAAAAgAAAAIAAUAAAAAAAcAAAAIAAUAAAAAAAYAAAAIAAUAAAAAAAUAAAAIAAQAAAAAAAQAAAALAAIAAAAAAAMAAAALAAIAAAASAAEAAAAJAAIAAAARAAEAAAAJAAIAAAAQAAEAAAAJAAIAAAAPAAEAAAAJAAIAAAAOAAEAAAAJAAIAAAANAAEAAAAJAAIAAAAMAAEAAAAJAAIAAAALAAEAAAAJAAIAAAAKAAEAAAAJAAIAAAAIAAEAAAAJAAIAAAAJAAEAAAAJAAIAAAAHAAEAAAAJAAIAAAAGAAEAAAAJAAIAAAAFAAEAAAAJAAIAAAAEAAEAAAAJAAIAAAADAAEAAAAJAAIAAAACAAEAAAAJAAIAAAABAAEAAAAJAAIAAAABAAIAAAAJAAMAAAACAAIAAAAJAAMAAAADAAIAAAAJAAMAAAAEAAIAAAAJAAMAAAAFAAIAAAAJAAMAAAAGAAIAAAAJAAMAAAAHAAIAAAAJAAMAAAAIAAIAAAAJAAMAAAAJAAIAAAAJAAMAAAAKAAIAAAAJAAMAAAALAAIAAAAJAAMAAAAMAAIAAAAJAAMAAAANAAIAAAAJAAMAAAAOAAIAAAAJAAMAAAAPAAIAAAAJAAMAAAAQAAIAAAAJAAMAAAARAAIAAAAJAAMAAAASAAIAAAAJAAMAAAABAAYAAAAGAAYAAAABAAgAAAAGAAUAAAABAAkAAAAJAAcAAAABAAUAAAAKAAQAAAABAAcAAAALAAYAAAApABQAAAAAAAUAAAApABMAAAAAAAQAAAApABIAAAAJAAMAAAApABEAAAAJAAIAAAApABAAAAAJAAIAAAApAA8AAAAJAAIAAAApAA4AAAAJAAIAAAApAA0AAAAJAAIAAAApAAwAAAAJAAIAAAApAAsAAAAJAAIAAAApAAoAAAAJAAIAAAApAAkAAAAJAAIAAAApAAgAAAAJAAIAAAApAAcAAAAJAAIAAAApAAYAAAAJAAIAAAApAAUAAAAJAAIAAAApAAQAAAAJAAIAAAApAAMAAAAJAAIAAAApAAIAAAAJAAIAAAApAAEAAAAJAAIAAAAoABIAAAAFAAMAAAAoABEAAAAIAAEAAAAoABAAAAAIAAEAAAAoAA8AAAAIAAEAAAAoAA4AAAAIAAEAAAAoAA0AAAAIAAEAAAAoAAwAAAAIAAEAAAAoAAsAAAAIAAEAAAAoAAoAAAAIAAEAAAAoAAkAAAAIAAEAAAAoAAgAAAAIAAEAAAAoAAcAAAAIAAEAAAAoAAYAAAAIAAEAAAAoAAUAAAAIAAEAAAAoAAQAAAAIAAEAAAAoAAMAAAAFAAIAAAAoAAIAAAAJAAIAAAAoAAEAAAAJAAIAAAAbAAoAAAABAAgAAAAcAAoAAAACAAsAAAAdAAoAAAACAAsAAAAeAAoAAAACAAsAAAAfAAoAAAACAAsAAAAgAAoAAAACAAsAAAAhAAoAAAACAAsAAAAiAAoAAAACAAsAAAAjAAoAAAACAAsAAAAkAAoAAAACAAsAAAAlAAoAAAADAAgAAAAlAAsAAAAAAAkAAAAbAAsAAAAAAAkAAAAbAAwAAAABAAoAAAAcAAwAAAACAAsAAAAdAAwAAAACAAsAAAAeAAwAAAACAAsAAAAfAAwAAAACAAsAAAAgAAwAAAACAAsAAAAhAAwAAAACAAsAAAAiAAwAAAACAAsAAAAjAAwAAAACAAsAAAAkAAwAAAACAAsAAAAlAAwAAAADAAoAAAAdAAgAAAABAAcAAAAeAAgAAAACAAcAAAAfAAgAAAADAAcAAAAhAAgAAAABAAcAAAAiAAgAAAACAAcAAAAjAAgAAAADAAcAAAAfAAYAAAABAAcAAAAgAAYAAAACAAcAAAAhAAYAAAADAAcAAAAZAAEAAAAJAAIAAAAZAAIAAAAGAAIAAAAaAAEAAAAGAAIAAAAZAAMAAAALAAMAAAAaAAIAAAALAAMAAAAbAAEAAAALAAMAAAAnAAEAAAAJAAIAAAAmAAEAAAAFAAIAAAAlAAEAAAAIAAMAAAAnAAIAAAAFAAIAAAAmAAIAAAAIAAMAAAAnAAMAAAAIAAMAAAAZAAQAAAAPAAAAADAaAAMAAAAPAAAAADAbAAIAAAAPAAAAADAcAAEAAAAPAAAAADAnAAQAAAAPAAAAADAmAAMAAAAPAAAAADAlAAIAAAAPAAAAADAkAAEAAAAPAAAAADAgAAUAAAAPAAAAAAAcAA0AAAAPAAAAADAdAA0AAAAPAAEAADAeAA0AAAAPAAAAADAfAA0AAAAPAAEAADAgAA0AAAAPAAAAADAhAA0AAAAPAAEAADAiAA0AAAAPAAAAADAjAA0AAAAPAAEAADAkAA0AAAAPAAAAADAYABEAAAALAAIAAAAXABEAAAAJAAIAAAAWABEAAAAJAAIAAAAWABAAAAAJAAIAAAAWAA8AAAAJAAIAAAAWAA4AAAAJAAIAAAAYAA4AAAALAAIAAAAYAA8AAAALAAIAAAAXAA8AAAAJAAIAAAAXABAAAAAJAAIAAAAXAA4AAAAJAAIAAAAYABAAAAALAAIAAAAWABIAAAAGAAIAAAAXABIAAAAJAAMAAAAYABIAAAAGAAMAAAAZABIAAAACAAMAAAAaABIAAAACAAMAAAAbABIAAAACAAMAAAAcABIAAAACAAMAAAAdABIAAAACAAMAAAAeABIAAAADAAMAAAAlABIAAAACAAMAAAAmABIAAAACAAMAAAAnABIAAAACAAMAAAAkABIAAAACAAMAAAAjABIAAAACAAMAAAAiABIAAAABAAMAAAAWABUAAAALAAIAAAAmABgAAAAAAAYAAAAiABgAAAACAAcAAAAhABgAAAACAAcAAAAgABgAAAACAAYAAAAfABgAAAACAAcAAAAeABgAAAACAAcAAAAdABgAAAACAAQAAAAcABgAAAACAAcAAAAbABgAAAACAAcAAAAaABgAAAABAAYAAAAaABsAAAADAAQAAAAWAB4AAAALAAIAAAAaAB4AAAAAAAYAAAAdAB4AAAABAAcAAAAdABsAAAAAAAYAAAAgABsAAAAAAAQAAAAjABsAAAABAAYAAAAkABsAAAACAAcAAAAlABsAAAACAAcAAAAmABsAAAACAAQAAAAnABsAAAACAAcAAAAWABsAAAALAAIAAAAWABgAAAALAAIAAAAjABgAAAADAAQAAAAeAB4AAAACAAcAAAAfAB4AAAACAAcAAAAgAB4AAAACAAYAAAAhAB4AAAACAAcAAAAjAB4AAAADAAQAAAAiAB4AAAACAAcAAAAmAB4AAAAAAAYAAAAmACEAAAADAAcAAAAlACEAAAACAAcAAAAkACEAAAACAAcAAAAjACEAAAABAAYAAAAgACEAAAAAAAQAAAAdACEAAAADAAcAAAAcACEAAAACAAcAAAAbACEAAAACAAcAAAAaACEAAAACAAQAAAAWACEAAAALAAIAAAAmACQAAAADAAcAAAAlACQAAAACAAcAAAAkACQAAAACAAcAAAAjACQAAAACAAQAAAAiACQAAAACAAcAAAAhACQAAAACAAcAAAAgACQAAAACAAYAAAAfACQAAAACAAcAAAAeACQAAAACAAcAAAAdACQAAAABAAcAAAAaACQAAAADAAYAAAAWACQAAAALAAIAAAAWABQAAAALAAIAAAAWABMAAAALAAIAAAAWABkAAAALAAIAAAAWABoAAAALAAIAAAAWAB8AAAALAAIAAAAWACAAAAALAAIAAAAWACcAAAALAAIAAAAWACgAAAALAAIAAAAWACUAAAALAAIAAAAWACYAAAALAAIAAAAWACMAAAALAAIAAAAWACIAAAALAAIAAAAWAB0AAAALAAIAAAAWABwAAAALAAIAAAAWABcAAAALAAIAAAAWABYAAAALAAIAAAAdABMAAAAAAAQAAAAdABQAAAAAAAUAAAAjABMAAAAAAAQAAAAjABQAAAAAAAUAAAAXABQAAAAAAAUAAAAXABMAAAAAAAQAAAArABAAAAALAAIAAAArAA8AAAALAAIAAAArAA4AAAALAAIAAAArAA0AAAALAAIAAAArAAwAAAALAAIAAAArAAsAAAALAAIAAAArAAoAAAALAAIAAAArAAkAAAALAAIAAAArAAgAAAALAAIAAAArAAcAAAALAAIAAAArAAYAAAALAAIAAAArAAUAAAALAAIAAAArAAQAAAALAAIAAAArAAMAAAALAAIAAAArAAIAAAALAAIAAAArAAEAAAALAAIAAAArAAAAAAALAAIAAAArAP//AAALAAAAAAAqABAAAAAJAAIAAAAqAA8AAAAJAAIAAAAqAA4AAAAJAAIAAAAqAA0AAAAJAAIAAAAqAAwAAAAJAAIAAAAqAAsAAAAJAAIAAAAqAAoAAAAJAAIAAAAqAAkAAAAJAAIAAAAqAAgAAAAJAAIAAAAqAAcAAAAJAAIAAAAqAAYAAAAJAAIAAAAqAAUAAAAJAAIAAAAqAAQAAAAJAAIAAAAqAAMAAAAJAAIAAAAqAAIAAAAJAAIAAAAqAAEAAAAJAAIAAAAqAAAAAAAJAAIAAAAqAP//AAAKAAAAAAArAB8AAAALAAIAAAArAB4AAAALAAIAAAArAB0AAAALAAIAAAArABwAAAALAAIAAAArABsAAAALAAIAAAArABoAAAALAAIAAAArABkAAAALAAIAAAArABgAAAALAAIAAAArABcAAAALAAIAAAArABYAAAALAAIAAAArABUAAAALAAIAAAArABQAAAALAAIAAAArABMAAAALAAIAAAArABIAAAALAAIAAAArABEAAAALAAIAAAAqAB8AAAAIAAEAAAAqAB4AAAAIAAEAAAAqAB0AAAAIAAEAAAAqABwAAAAIAAEAAAAqABsAAAAIAAEAAAAqABoAAAAIAAEAAAAqABkAAAAIAAEAAAAqABgAAAAIAAEAAAAqABcAAAAIAAEAAAAqABYAAAAIAAEAAAAqABUAAAAIAAEAAAAqABQAAAAIAAEAAAAqABMAAAAIAAEAAAAqABIAAAAFAAIAAAAqABEAAAAJAAIAAAArACoAAAALAAIAAAArACkAAAALAAIAAAArACgAAAALAAIAAAArACcAAAALAAIAAAArACYAAAALAAIAAAArACUAAAALAAIAAAArACQAAAALAAIAAAArACMAAAALAAIAAAArACIAAAALAAIAAAArACEAAAALAAIAAAArACAAAAALAAIAAAAqACoAAAAFAAEAAAAqACkAAAAIAAEAAAAqACgAAAAIAAEAAAAqACcAAAAIAAEAAAAqACYAAAAIAAEAAAAqACUAAAAIAAEAAAAqACQAAAAIAAEAAAAqACMAAAAIAAEAAAAqACIAAAAIAAEAAAAqACEAAAAIAAEAAAAqACAAAAAIAAEAAAAaABUAAAAAAAQAAAAdABUAAAAAAAYAAAAXABUAAAAAAAYAAAAgABUAAAAAAAQAAAAjABUAAAABAAYAAAAkABUAAAACAAcAAAAlABUAAAACAAcAAAAmABUAAAADAAQAAAApABUAAAAAAAYAAAApABgAAAAAAAQAAAAXABgAAAAAAAQAAAAZABsAAAACAAcAAAAYABsAAAACAAcAAAAXABsAAAABAAYAAAApAB4AAAAAAAQAAAApABsAAAADAAYAAAAoABsAAAACAAcAAAAXAB4AAAAAAAQAAAAZACEAAAACAAcAAAAYACEAAAACAAcAAAAXACEAAAABAAYAAAAXACQAAAABAAQAAAAYACQAAAACAAcAAAApACQAAAAAAAQAAAApACEAAAAAAAYAAAAgABYAAAAAAAUAAAAgABcAAAAAAAUAAAAaABYAAAAAAAUAAAAaABcAAAAAAAUAAAAmABYAAAAAAAUAAAAmABcAAAAAAAUAAAAjABkAAAAAAAUAAAAjABoAAAAAAAUAAAAdABkAAAAAAAUAAAAdABoAAAAAAAUAAAAXABkAAAAAAAUAAAAXABoAAAAAAAUAAAAXAB8AAAAAAAUAAAAXACAAAAAAAAUAAAApAB8AAAAAAAUAAAApACAAAAAAAAUAAAApABkAAAAAAAUAAAApABoAAAAAAAUAAAAaABwAAAAAAAUAAAAaAB0AAAAAAAUAAAAgABwAAAAAAAUAAAAgAB0AAAAAAAUAAAAmABwAAAAAAAUAAAAmAB0AAAAAAAUAAAAjAB8AAAAAAAUAAAAjACAAAAAAAAUAAAAaACIAAAAAAAUAAAAaACMAAAAAAAUAAAAgACIAAAAAAAUAAAAgACMAAAAAAAUAAAD//ysAAAAIAAMAAAAAACsAAAAJAAMAAAABACsAAAAJAAMAAAACACsAAAAJAAMAAAADACsAAAAJAAMAAAAEACsAAAAJAAMAAAAGACsAAAAJAAMAAAAHACsAAAAJAAMAAAAIACsAAAAJAAMAAAAJACsAAAAJAAMAAAAKACsAAAAJAAMAAAALACsAAAAJAAMAAAAMACsAAAAJAAMAAAANACsAAAAJAAMAAAAOACsAAAAJAAMAAAAPACsAAAAJAAMAAAAQACsAAAAJAAMAAAARACsAAAAJAAMAAAASACsAAAAJAAMAAAATACsAAAAJAAMAAAAUACsAAAAJAAMAAAAVACsAAAAJAAMAAAAWACsAAAAJAAMAAAAXACsAAAAJAAMAAAAYACsAAAAJAAMAAAAZACsAAAAJAAMAAAAaACsAAAAJAAMAAAAbACsAAAAJAAMAAAAcACsAAAAJAAMAAAAdACsAAAAJAAMAAAAeACsAAAAJAAMAAAAfACsAAAAJAAMAAAAgACsAAAAJAAMAAAAhACsAAAAJAAMAAAAiACsAAAAJAAMAAAAjACsAAAAJAAMAAAAkACsAAAAJAAMAAAAlACsAAAAJAAMAAAAmACsAAAAJAAMAAAAnACsAAAAJAAMAAAAoACsAAAAJAAMAAAApACsAAAAJAAMAAAAqACsAAAAJAAMAAAArACsAAAALAAMAAAAFACgAAAAAAAQAAAAFACkAAAAAAAUAAAAFACoAAAAAAAUAAAAFACsAAAAAAAUAAAAFACwAAAAAAAYAAAAXACcAAAABAAYAAAAYACcAAAACAAcAAAAZACcAAAACAAcAAAAaACcAAAADAAQAAAAdACcAAAABAAcAAAAeACcAAAACAAcAAAAfACcAAAACAAcAAAAgACcAAAADAAQAAAAjACcAAAABAAYAAAAkACcAAAACAAcAAAAlACcAAAACAAcAAAAmACcAAAACAAcAAAAnACcAAAACAAcAAAAoACcAAAACAAcAAAApACcAAAADAAYAAAAXACUAAAAAAAUAAAAXACYAAAAAAAUAAAAjACUAAAAAAAUAAAAjACYAAAAAAAUAAAApACUAAAAAAAUAAAApACYAAAAAAAUAAAAaACgAAAAAAAUAAAAaACkAAAAAAAYAAAAgACgAAAAAAAUAAAAgACkAAAAAAAYAAAAZACQAAAACAAcAAAA=")
tile_set = ExtResource("2_8i7y1")
metadata/_edit_lock_ = true

[node name="SceneParts" type="Node2D" parent="."]

[node name="Pad" parent="SceneParts" instance=ExtResource("3_siekg")]
position = Vector2(18, 228)

[node name="Pad2" parent="SceneParts" instance=ExtResource("3_siekg")]
position = Vector2(354, 216)

[node name="Pad3" parent="SceneParts" instance=ExtResource("3_siekg")]
position = Vector2(426, 216)

[node name="Pad4" parent="SceneParts" instance=ExtResource("3_siekg")]
position = Vector2(330, 288)

[node name="Pad5" parent="SceneParts" instance=ExtResource("3_siekg")]
position = Vector2(378, 288)

[node name="Pad6" parent="SceneParts" instance=ExtResource("3_siekg")]
position = Vector2(402, 288)

[node name="Pad7" parent="SceneParts" instance=ExtResource("3_siekg")]
position = Vector2(438, 324)

[node name="Pad8" parent="SceneParts" instance=ExtResource("3_siekg")]
position = Vector2(486, 324)

[node name="Pad9" parent="SceneParts" instance=ExtResource("3_siekg")]
position = Vector2(294, 324)

[node name="Pad10" parent="SceneParts" instance=ExtResource("3_siekg")]
position = Vector2(378, 360)

[node name="Pad11" parent="SceneParts" instance=ExtResource("3_siekg")]
position = Vector2(402, 360)

[node name="Pad12" parent="SceneParts" instance=ExtResource("3_siekg")]
position = Vector2(294, 396)

[node name="Pad13" parent="SceneParts" instance=ExtResource("3_siekg")]
position = Vector2(342, 396)

[node name="Pad14" parent="SceneParts" instance=ExtResource("3_siekg")]
position = Vector2(402, 432)

[node name="Pad15" parent="SceneParts" instance=ExtResource("3_siekg")]
position = Vector2(438, 396)

[node name="Pad16" parent="SceneParts" instance=ExtResource("3_siekg")]
position = Vector2(378, 432)

[node name="Pad17" parent="SceneParts" instance=ExtResource("3_siekg")]
position = Vector2(330, 504)

[node name="Pad18" parent="SceneParts" instance=ExtResource("3_siekg")]
position = Vector2(402, 504)

[node name="Pad19" parent="SceneParts" instance=ExtResource("3_siekg")]
position = Vector2(486, 468)

[node name="Circuit" type="Node2D" parent="."]
script = ExtResource("5_r15o5")
zero = Color(1, 1, 1, 1)
one = Color(1, 0.733333, 0, 1)

[node name="Laser1" parent="Circuit" instance=ExtResource("3_exlq3")]
position = Vector2(270, 126)
metadata/_edit_group_ = true

[node name="Shape" type="CollisionShape2D" parent="Circuit/Laser1"]
shape = SubResource("RectangleShape2D_rubjj")

[node name="View" type="AnimatedSprite2D" parent="Circuit/Laser1"]
rotation = 1.5708
scale = Vector2(3, 1)
sprite_frames = SubResource("SpriteFrames_1p5sf")
frame_progress = 0.276741

[node name="Laser2" parent="Circuit" instance=ExtResource("3_exlq3")]
position = Vector2(390, 90)
metadata/_edit_group_ = true

[node name="Shape" type="CollisionShape2D" parent="Circuit/Laser2"]
shape = SubResource("RectangleShape2D_a0b48")

[node name="View" type="AnimatedSprite2D" parent="Circuit/Laser2"]
position = Vector2(-2.14577e-05, 0)
scale = Vector2(15, 1)
sprite_frames = SubResource("SpriteFrames_1p5sf")
frame_progress = 0.276741

[node name="Wire1" type="TileMapLayer" parent="Circuit"]
z_index = 1
tile_map_data = PackedByteArray("AAAEAAEAAAAPAA8AAAADAAEAAAAOAA8AAAACAAEAAAANAAwAAAACAAIAAAAMAA4AAAA=")
tile_set = ExtResource("2_8i7y1")

[node name="Wire2" type="TileMapLayer" parent="Circuit"]
z_index = 1
tile_map_data = PackedByteArray("AAAWAAgAAAAMAA4AAAAWAAcAAAAMAA0AAAAWAAYAAAANAA0AAAAWAAUAAAAMAA0AAAAWAAQAAAAMAA0AAAAWAAMAAAAMAA0AAAAWAAIAAAAMAA0AAAAWAAEAAAAPAAwAAAAVAAEAAAAOAA8AAAAUAAEAAAAOAA8AAAATAAEAAAAOAA8AAAASAAEAAAAOAA8AAAARAAEAAAAOAA8AAAAQAAEAAAAOAA8AAAAPAAEAAAAOAA8AAAAOAAEAAAAOAA8AAAANAAEAAAAOAA8AAAAMAAEAAAAOAA8AAAALAAEAAAAOAA8AAAAKAAEAAAAOAA8AAAAJAAEAAAAOAA8AAAAIAAEAAAAOAA8AAAAHAAEAAAAOAA8AAAAGAAEAAAAOAA8AAAAFAAEAAAAOAA8AAAAEAAEAAAANAA8AAAAXAAYAAAAPAA8AAAA=")
tile_set = ExtResource("2_8i7y1")

[node name="Wire3" type="TileMapLayer" parent="Circuit"]
z_index = 1
tile_map_data = PackedByteArray("AAAYAAcAAAAMAA4AAAAYAAYAAAAPAAwAAAAXAAYAAAANAA8AAAA=")
tile_set = ExtResource("2_8i7y1")

[node name="Trigger1" type="Sprite2D" parent="Circuit"]
z_index = 1
position = Vector2(54, 18)
texture = SubResource("AtlasTexture_a6i1b")

[node name="Out" type="Sprite2D" parent="Circuit/Trigger1"]
z_index = 1
texture = SubResource("AtlasTexture_ivpx0")

[node name="Not" type="Sprite2D" parent="Circuit"]
z_index = 1
position = Vector2(282, 78)
texture = SubResource("AtlasTexture_2v7sc")

[node name="Out" type="Sprite2D" parent="Circuit/Not"]
z_index = 1
texture = SubResource("AtlasTexture_ivpx0")

[node name="Button1" parent="Circuit" instance=ExtResource("5_20868")]
position = Vector2(30, 36)
rotation = 3.14159

[node name="Moving" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="Path1" type="Path2D" parent="Moving"]
curve = SubResource("Curve2D_a8ipg")
script = ExtResource("8_7owp2")

[node name="Moving" type="PathFollow2D" parent="Moving/Path1"]
position = Vector2(192, 372)
rotates = false

[node name="TileMapLayer" type="TileMapLayer" parent="Moving/Path1/Moving"]
tile_map_data = PackedByteArray("AAAAAAEAAAAOAAAAADACAAEAAAAMAAAAADACAAAAAAADAAcAAAAAAAAAAAABAAcAAAABAAAAAAACAAcAAAABAAEAAAANAAAAADA=")
tile_set = ExtResource("2_8i7y1")

[node name="Damage" parent="Moving/Path1/Moving" instance=ExtResource("3_exlq3")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Moving/Path1/Moving/Damage"]
position = Vector2(18, 13)
shape = SubResource("RectangleShape2D_mwfjw")

[node name="Timer" type="Timer" parent="Moving/Path1"]
process_callback = 0
wait_time = 3.0
autostart = true

[node name="Damage" parent="." instance=ExtResource("3_exlq3")]
metadata/_edit_lock_ = true

[node name="Spike1" type="CollisionShape2D" parent="Damage"]
position = Vector2(126, 369)
shape = SubResource("RectangleShape2D_0ybfr")

[node name="Spike2" type="CollisionShape2D" parent="Damage"]
position = Vector2(204, 297)
shape = SubResource("RectangleShape2D_jnvvs")

[node name="Spike3" type="CollisionShape2D" parent="Damage"]
position = Vector2(138, 179)
shape = SubResource("RectangleShape2D_n5hh5")

[node name="Spike4" type="CollisionShape2D" parent="Damage"]
position = Vector2(138, 193)
shape = SubResource("RectangleShape2D_7vndr")

[node name="Spike5" type="CollisionShape2D" parent="Damage"]
position = Vector2(234, 213)
shape = SubResource("RectangleShape2D_33ydi")

[node name="Spike6" type="CollisionShape2D" parent="Damage"]
position = Vector2(133, 119)
shape = SubResource("RectangleShape2D_r702x")

[node name="Spike7" type="CollisionShape2D" parent="Damage"]
position = Vector2(306, 51)
shape = SubResource("RectangleShape2D_33ydi")

[node name="Spike8" type="CollisionShape2D" parent="Damage"]
position = Vector2(318, 39)
shape = SubResource("RectangleShape2D_33ydi")

[node name="Spike9" type="CollisionShape2D" parent="Damage"]
position = Vector2(330, 27)
shape = SubResource("RectangleShape2D_33ydi")

[node name="Spike10" type="CollisionShape2D" parent="Damage"]
position = Vector2(342, 15)
shape = SubResource("RectangleShape2D_33ydi")

[node name="Spike11" type="CollisionShape2D" parent="Damage"]
position = Vector2(438, 15)
shape = SubResource("RectangleShape2D_33ydi")

[node name="Spike12" type="CollisionShape2D" parent="Damage"]
position = Vector2(450, 27)
shape = SubResource("RectangleShape2D_33ydi")

[node name="Spike13" type="CollisionShape2D" parent="Damage"]
position = Vector2(462, 39)
shape = SubResource("RectangleShape2D_33ydi")

[node name="Spike14" type="CollisionShape2D" parent="Damage"]
position = Vector2(474, 51)
shape = SubResource("RectangleShape2D_33ydi")

[node name="Spike15" type="CollisionShape2D" parent="Damage"]
position = Vector2(390, 69)
shape = SubResource("RectangleShape2D_33ydi")

[node name="Spike16" type="CollisionShape2D" parent="Damage"]
position = Vector2(390, 159)
shape = SubResource("RectangleShape2D_u4myh")

[node name="TL" type="Marker2D" parent="."]
metadata/_edit_lock_ = true

[node name="BR" type="Marker2D" parent="."]
position = Vector2(516, 516)
metadata/_edit_lock_ = true

[node name="Spawn" type="Marker2D" parent="."]
position = Vector2(66, 474)
metadata/_edit_lock_ = true

[node name="Coin" parent="." instance=ExtResource("4_onjdc")]
position = Vector2(390, 42)

[node name="Exit" parent="." instance=ExtResource("5_glqln")]
position = Vector2(486, 498)

[connection signal="click" from="Circuit/Button1" to="Circuit" method="_on_button_click"]
